# chat-xray-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STEPS.md  Dockerfile  Dockerfile.ollama  FIXES.md  LICENSE  README.md  README_TIMEOUT_FIX.md  bot_log.txt  bot_status.py  check_deployment.py  check_ollama_connection.py  check_openai.py  check_uploads.py  check_webhook.py  create_pr.sh  create_pr_with_token.sh  deploy-with-gh.sh  deploy_manually.py  deploy_render.py  docker-compose.yml  entrypoint-ollama.sh  fetch_render_logs.py  fix_and_redeploy.py  fix_render_services.sh  force_redeploy.py  get_render_app_logs.py  install-model.sh  list_render_services.py  new_bot_log.txt  push_changes.sh  pyproject.toml  redeploy.py  redeploy_bot.py  redeploy_curl.sh  render.yaml  (+17 more)
.github/workflows/: deploy.yml
app/: __init__.py  bot.py  config.py
app/handlers/: __init__.py  upload.py
app/services/: __init__.py  chunker.py  graphics.py  llm_meta.py  llm_primary.py  local_llm.py  render.py
app/utils/: __init__.py  cleanup.py  logging_utils.py
docs/: privacy_policy.md
tests/: __init__.py  test_chunker.py  test_render.py  test_services.py  test_upload.py
