[tool.poetry]
name = "chat-xray"
version = "0.1.0"
description = "Telegram bot that analyzes chat files and generates PDF reports"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.3.0"
openai = "^1.12.0"
weasyprint = "^60.2"
tiktoken = "^0.5.2"
python-dotenv = "^1.0.0"
sentry-sdk = "^1.39.1"
APScheduler = "^3.10.4"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
ruff = "^0.1.8"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "B", "C90"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 